--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITS BOUQUET</title>
-    <link rel="icon" href="/img/Logo_only_no_bg.png" />
+    <link rel="icon" href="/img/logo_only_no_bg.png" />
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/aos.css">
     <style>
