--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -78,7 +78,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-2">
                 <!-- Logo -->
-                <img src="/img/logo_only_no_bg.png" class="w-[50px]" alt="logo">
+                <img src="/img/Logo_only_no_bg.png" class="w-[50px]" alt="logo">
 
                 <!-- Menu Desktop -->
                 <ul class="hidden md:flex space-x-6 text-lg font-medium">
@@ -112,7 +112,7 @@
     <!-- hero section -->
     <section class="h-screen flex flex-col items-center justify-center mb-32" id="home">
         <h1 data-aos="fade-up" class="text-4xl font-medium text-[#c9a051] pt-32">Selamat Datang Di</h1>
-        <img data-aos="zoom-in" src="/img/logo_no_bg.png" alt="logo">
+        <img data-aos="zoom-in" src="/img/Logo_no_bg.png" alt="logo">
         <div class="w-full lg:px-56 sm:px-8 px-20 md:scroll-px-20 text-xl text-center mb-8">
             <p>
                 Kami menghadirkan berbagai jenis buket, tidak hanya bunga! Dari buket uang, buket snack, buket boneka,
